--- a/SXNU_Questionnaire/SXNU_Questionnaire/Views/Ques/Answer.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Views/Ques/Answer.cshtml
@@ -19,6 +19,7 @@
     <div class="left volume_left w-160 center" data-bind="visible:$root.IsShowTime()"><h1 id="Countdown"> </h1>&nbsp;<!--ko text: $root.Time_Desc--><!--/ko--></div>
     <div class="left volume_right w-816">
         <h2>@ViewBag.wj_Title</h2>
+        <h3>@ViewBag.wj_Abstract</h3>
         @*<input type="button" data-bind="click:TestData" value="测试结果" />*@
         <div class="volume_bj m-l15 m-r15 m-b50" data-bind="foreach:$root.ShowSTInfo">
 
